--- a/lab5/trail-management/src/main/resources/application-h2.properties
+++ b/lab5/trail-management/src/main/resources/application-h2.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:h2:file:~/data/demo
+spring.datasource.url=jdbc:h2:~/data/sample
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=pass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
 spring.h2.console.path=/h2
